hopefully this fixes layout issue

--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,6 @@ nav {
     color: black;
 }
 
-.nav-links:hover a {
-}
-
-
 .navlogo {
     min-width: 130px;
     max-width: 12vw;
